sandbox/output
Patient.java:14: error: cannot find symbol
        if (!isOverlapped(clashingMedicines)) {
             ^
  symbol:   method isOverlapped(List<Medicine>)
  location: class Patient
1 error
